--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
   },
   "homepage": "https://github.com/Year4-S1/CTSE#readme",
   "dependencies": {
+    "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "date-utils": "^1.2.21",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.2"
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.2",
+    "nodemailer": "^6.7.2"
   }
 }
